--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,11 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: 'Sono', sans-serif;
-  padding: 48px 64px;
+  padding: 48px 64px 0px;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .hidden {
@@ -40,8 +44,13 @@ body {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 48px;
+  height: 90vh;
 }
 
+section {
+  overflow-y: scroll;
+  padding-bottom: 40px;
+}
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
@@ -221,9 +230,15 @@ ul {
   margin-right: 18px;
 }
 
+.disputed {
+  color: #ef4444;
+  font-weight: 600;
+  margin-right: 10px;
+}
+
 @media (max-width: 1000px) {
   body {
-    padding: 32px 48px;
+    /* padding: 32px 48px; */
   }
 
   .fact-form {
