--- a/src/style.css
+++ b/src/style.css
@@ -11,10 +11,6 @@ body {
   padding: 48px 64px 0px;
 }
 
-body::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
-}
-
 .hidden {
   display: none !important;
 }
@@ -44,13 +40,18 @@ body::-webkit-scrollbar {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 48px;
-  height: 90vh;
+  height: calc(100vh - 48px - 60px - 48px);
 }
 
 section {
   overflow-y: scroll;
   padding-bottom: 40px;
 }
+
+section::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
