--- a/src/style.css
+++ b/src/style.css
@@ -198,7 +198,7 @@ ul {
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
-  padding: 16px 32px;
+  padding: 32px 42px;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -221,8 +221,21 @@ ul {
   color: #a8a29e;
 }
 
-.fact-form input:first-child {
+.fact-form div {
   flex-grow: 1;
+  position: relative;
+}
+
+.fact-form div input {
+  width: 100%;
+}
+
+.fact-form div span {
+  position: absolute;
+  top: 58px;
+  padding-left: 16px;
+  left: 0;
+  color: #ef4444;
 }
 
 .fact-form span {
